--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_ENV=development
 PORT=5001
 
-MONGO_URI=mongodb+srv://jk9876211:Jagdeshrai%401@real-estate.a5jdq.mongodb.net/?retryWrites=true&w=majority&appName=real-estate
+MONGO_URI=mongodb+srv://jagdeshk953:Jagdesh143@cluster0.55yeu2y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://jk9876211:Jagdeshrai%401@real-estate.a5jdq.mongodb.net/?retryWrites=true&w=majority&appName=real-estate
 
 JWT_SECRET=abc123
 
